static/css/base.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');

html {
    height: 100%;
}

body {
    min-height: 100vh;
    position: relative;
}

/* Genral container Bag */
.books-container {
    height: 100vh;
}

.books-blue-text {
    color: #00004d !important;
}

.border-blue {
    border: 1px solid #00004d !important;
}

.owl-carousel {
    background-color: #f0f0f0;
}

.carousel-image {
    position: absolute;
    margin-top: 15%;
    margin-left: 10%;
    box-shadow: 5px 5px 20px #000;
}

.carousel-info {
    height: 75%;
    width: 50%;
    position: absolute;
    margin-top: 14%;
    margin-left: 50%;
    font-family: 'Open Sans', sans-serif;
    color: #00004d;
}

.carousel-info ul {
    list-style-type: none;
}

.carousel-stars {
    margin-left: -17%;
}

.carousel-bg-image{
    height: 250px;
    width: 100%;
    background-image: url(/media/grey-smoke-png-9-transparent.png);
    background-position: center;
}

.carousel-bg-one {
    /* background-color: #DEC4D6; */
    /* background-color: #e751a0; */
    /* background-color: #F278B8; */
    background-color: #FAB5D9;
}

.carousel-bg-two {
    /* background-color: #A4CCE3; */
    /* background-color: #bdf696; */
    background-color: #FF7D3B;
    /* background-color: #B4F9BC; */
    
}

.carousel-bg-three {
    /* background-color: #90CDC3; */
    /* background-color: #ff9159; */
    background-color: #CDFA7C;
    /* background-color: #E4FDB7; */
}

.carousel-bg-four {
    /* background-color: #7B92AA; */
    /* background-color: #4ad3a6; */
    background-color: #73E8C2;
    /* background-color: #FFD0B8; */
}

.carousel-bottom {
    height: 80px;
    background-color: #f0f0f0;
    width: 100%;
}

.carousel-button {
    background-color: #f0f0f0;
    text-decoration: none;
    border-radius: 12px;
    padding: 4px 18px;
    box-shadow: 5px 5px 10px #000;
    color: #00004d;
    font-weight: 600;
    position: absolute;
}

.carousel-button:hover {
    background-color: #00004d;
    color: #f0f0f0;
}

.carousel-edit-button {
    position: absolute;
    margin-top: 40px;
}

.author-image {
    max-width: 40px;
    max-height: 80px;
}

.author-text {
    color: #00004d;
}

.home-main {
    background-color: #f0f0f0;
}

.pop-genres-main {
    min-height: 400px;
}

.pop-genres-card {
    min-height: 250px;
}

.pop-genres-info {
    font-family: 'Open Sans', sans-serif;
    color: #00004d;
    text-decoration: none;  
}

.pop-genres-info ul {
    list-style-type: none;
}

.pop-genres-stars {
    margin-left: -31px;
}

.pop-genres-button {
    background-color: #00004d;
    text-decoration: none;
    border-radius: 12px;
    padding: 4px 18px;
    box-shadow: 5px 5px 10px #000;
    color: #f0f0f0;
    font-weight: 600;
}

.pop-genres-button:hover {
    background-color: #f0f0f0;
    color: #00004d;
    box-shadow: 5px 5px 10px #00004d;
}

.deal-image {
    height: 100px;
    width: 80px;
}

.deal-text {
    font-family: 'Open Sans', sans-serif;
    color: #00004d;
    text-decoration: none; 
}

.deal-text ul {
    list-style-type: none;
}

.bg-lite-gray {
    background-color: #b8b8b8;
}

.stars {
    display: inline;
}

/* Back to top button */

.back-to-top-button {
    background-color: #00004d;
    border-radius: 12px;
    height: 42px;
    width: 42px;
    position: fixed;
    bottom: 10px;
    right: 10px;
}

.back-to-top-button span {
color: #f0f0f0;
font-size: 38px;
margin-top: -10px;
}

.back-to-top-link,
.update-link,
.remove-item {
    cursor: pointer;
}

/* ------------------------------- bootstrap toasts */

.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}

/* Books page */

.all-books-button {
    border-radius: 12px;
    padding: 4px 18px;
    color: #F5F5F5;
    background-color: #00004d;
    
}

.books-card {
    font-family: 'Open Sans', sans-serif;
    color: #00004d;
    text-decoration: none;
    min-height: 310px;
}

.books-img {
    min-width: 130px;
}

.books-card ul {
    list-style-type: none;
}

.books-button-white {
    background-color: #F5F5F5;
    text-decoration: none;
    border: #00004d;
    border-style: solid;
    border-radius: 12px;
    padding: 4px 18px;
    box-shadow: 5px 5px 10px #000;
    color: #00004d;
    font-weight: 600;
}

.books-button-white:hover {
    background-color: #00004d;
    color: #F5F5F5;
}


.books-button {
    background-color: #00004d;
    text-decoration: none;
    border-radius: 12px;
    border: 3px solid #00004d;
    padding: 4px 18px;
    box-shadow: 5px 5px 10px #000;
    color: #F5F5F5;
    font-weight: 600;
    
}

.books-button:hover {
    background-color: #F5F5F5;
    color: #00004d;
    border: 3px solid #00004d;
}

.button-blue {
    background: #00004d;
    color: #F5F5F5;
}

.button-blue:hover,
.button-blue:active,
.button-blue:focus {
    background: #1e1e88;
    color: #F5F5F5;
}

/* Book info page */
.info-book-img {
    margin-top: 20%;
    margin-left: 20%;
    width: 80%;
}

.synopsis-author-button {
    background: #00004d;
    color: #F5F5F5;
}

.synopsis-author-button:hover {
    background: #1e1e88;
    color: #F5F5F5;
}

.synopsis-author-button:active {
    background-color: #F5F5F5;
    border: #00004d;
    border-radius: 3px;
}

/* Book info carousel */
.carousel-bg-info {
    height: 250px;
    width: 100%;
    background-color: #fff;
}

.bag-button {
    border-radius: 12px;
    padding: 4px 18px;
}

/* Allauth */

.header-title {
    color: #00004d;
    font-family: 'Open Sans', sans-serif;
}

/* Allauth form formatting */

.allauth-form-inner-content p {
    margin-top: 1.5rem; /* mt-4 */
    color: #00004d; /* text-secondary */
}

.allauth-form-inner-content input {
    border-color: #00004d;
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
	/* btn */
	display: inline-block;
    color: #fff;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: #00004d;
    border: 3px solid #00004d;
    border-radius: 12px;
    padding: 4px 18px;
    box-shadow: 5px 5px 10px #000;
    font-size: 1rem;
    line-height: 1.5;
    font-weight: 600;

    /* standard bootstrap btn transitions */
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {	
	color: #00004d;
    background-color: #f0f0f0;
    border-color: #00004d;
}

.allauth-form-inner-content a {
	color: #1e1e88; /* text-info */
}

.allauth-form-inner-content .form-check-label {
    color: #00004d;
}

